--- a/app/partials/xrays.html
+++ b/app/partials/xrays.html
@@ -1,5 +1,12 @@
 <p class="page-header"> X-rays </p>
 
+<p align="center">
+    Copies of these phtots can be found on
+    <a href="https://www.dropbox.com/sh/38574t3eq8wydgf/AAAQ-BuNaXo9KkJUvkSnc05Ua?dl=0">
+        Zosia's Dropbox
+    </a>.
+</p>
+
 <table class="table table-striped table-hover table-notes container">
     <thead ng-controller="MedController" tc-col-labels type="xrays"></thead>
     <!-- We still get a single 404 because Blueimp gallery loads "too early"?: Failed to load resource: the server responded with a status of 404 (Not Found) http://localhost:8000/app/%7B%7B%20event.xrays%20%7D%7D (http://localhost:8000/app/{{ event.xrays }}) -->
